| Bug #8406 | Triggers crash if referencing a table | ||
|---|---|---|---|
| Submitted: | 9 Feb 2005 23:07 | Modified: | 10 Jul 2005 15:48 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.3-alpha-debug | OS: | Linux (SUSE 9.) |
| Assigned to: | Dmitri Lenev | Target Version: | |
[9 Feb 2005 23:07]
Peter Gulutzan
[9 Feb 2005 23:15]
Miguel Solorzano
Thank you for the bug report. I was able to repeat.
[29 Jun 2005 9:17]
Dmitri Lenev
Please note that: - Starting from 5.0.3 server does not crash in this situation. Instead trigger will emit following warning: "Error 1100: Table 'some_table' was not locked with LOCK TABLES" - Starting from 5.0.7 this problem is reported as error and trigger failure causes failure of statement which invokes this trigger.
[4 Jul 2005 22:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26654
[9 Jul 2005 22:09]
Dmitri Lenev
Fixed in 5.0.10. Please also mention in ChangeLog that now we support access to tables from triggers without any additional tricks (i.e. without doing explicit LOCK TABLES for all tables used in trigger before execution of statement which should invoke this trigger).
[10 Jul 2005 15:48]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Bugfix and functionality changes documented in 5.0.10 change history; closed.
[11 Jul 2005 7:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/26825
